--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@patternfly/react-core": "^3.112.3",
     "@patternfly/react-styles": "^3.5.27",
+    "@patternfly/react-topology": "^2.8.65",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.1",
     "@types/react": "16.9.7",
