--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.7",
     "@types/react-dom": "16.9.2",
+    "@types/react-router-dom": "^5.1.0",
     "patternfly-react": "^2.39.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
