--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "latest"
+  - "stable"
 cache:
   directories:
   - node_modules
@@ -14,4 +14,4 @@ deploy:
   github_token: $github_token
   local_dir: build
   on:
-    branch: master
+    branch: developer
