--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ script:
   - npm test
   - npm run lint
   - npm run build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $github_token
-  local_dir: build
-  on:
-    branch: developer
+# deploy:
+#   provider: pages
+#   skip_cleanup: true
+#   github_token: $github_token
+#   local_dir: build
+#   on:
+#     branch: developer
