--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.7",
     "@types/react-dom": "16.9.2",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
     "patternfly-react": "^2.39.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.6.4"
   },
   "scripts": {
