--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "axios": "^0.19.0",
+    "latest-version": "^5.1.0",
     "patternfly-react": "^2.39.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
