--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,10 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "node": true
+        "es6": true
     },
     "extends": [
-        "google",
-        "plugin:react/recommended"
+        "airbnb"
     ],
     "globals": {
         "Atomics": "readonly",
