--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "16.9.7",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "node-latest-version": "^1.0.16",
     "patternfly-react": "^2.39.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
