--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-markdown": "^4.2.2",
+    "react-monaco-editor": "^0.32.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
