--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "patternfly-react": "^2.39.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-github-login": "^1.0.3",
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
